fix: --z-index-headerの値を修正

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ global > z-index
 */
 :root {
   --z-index-modal: 100;
-  --z-index-header: 30;
+  --z-index-header: 1000;
   --z-index-menu: 10;
   --z-index-default: 1;
 }
@@ -581,7 +581,7 @@ layout > header
   left: 0;
   width: 100%;
   border-bottom: 1px solid var(--line-color);
-  z-index: 10000;
+  z-index: var(--z-index-header);
   background-color: var(--bg-color);
 }
 @media screen and (min-width: 768px) {
