--- a/scss/global/_z-index.scss
+++ b/scss/global/_z-index.scss
@@ -4,7 +4,7 @@ global > z-index
 */
 :root {
     --z-index-modal: 100;
-    --z-index-header: 30;
+    --z-index-header: 1000;
     --z-index-menu: 10;
     --z-index-default: 1;
 }
